feat(implement): implement access token

--- a/src/views/emails/templateMails/sendOTP.hbs
+++ b/src/views/emails/templateMails/sendOTP.hbs
@@ -1,4 +1,4 @@
-<p>Hi {{name}}</p>
+<p>Hi {{name}},</p>
 <p>Welcome to Domique Fusion, we're glad to have you 🎉</p>
 <p>You are requesting a verification code for authentication on our system.
   Please use the OTP below to proceed:
