--- a/src/views/emails/templateMails/welcome.hbs
+++ b/src/views/emails/templateMails/welcome.hbs
@@ -1,4 +1,4 @@
-<p>Hi {{name}}</p>
+<p>Hi {{name}},</p>
 <p>Welcome to Domique Fusion, we're glad to have you 🎉</p>
 <p>We're all a big familiy here, so make sure to login your account to booking
   restaurants!</p>
