feat(update): update ui email

--- a/src/views/emails/templateMails/sendOTP.hbs
+++ b/src/views/emails/templateMails/sendOTP.hbs
@@ -20,9 +20,12 @@
           <tbody>
             <tr>
               <td>
-                <a href='{{url}}' target='_blank'>
-                  Login your account
-                </a>
+                <img
+                  src='https://res.cloudinary.com/dn797d3j3/image/upload/v1746718021/woomaster/head_banner_web2_kwu2h4.jpg'
+                  alt='cover-email'
+                  width='500'
+                  height='200'
+                />
               </td>
             </tr>
           </tbody>
